config-file/pv-pvc/longhorn-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-nginx
spec:
  containers:
  - name: longhorn-nginx
    image: nginx:alpine
    volumeMounts:
    - name: longhorn-web
      mountPath: /usr/share/nginx/html
  volumes:
  - name: longhorn-web
    persistentVolumeClaim:
      claimName: longhorn-pvc-test
